[package]
name = "mathfuck"
version = "0.1.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
edition = "2018"
license = "WTFPL"

[package.metadata.ndk]
targets = ["arm64-v8a"]
platform = 24

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
tracing = "0.1"
fastrand = "1"

[dependencies.quest_hook]
git = "https://github.com/StackDoubleFlow/quest-hook-rs.git"
features = ["unity2019"]
